<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@drawable/shop1">

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/shop1"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/shop_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="cursive"
                    android:text="@string/shop_name"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:typeface="monospace" />

                <ImageView
                    android:id="@+id/adress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/shop_name"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/adress" />

                <TextView
                    android:id="@+id/adress_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/shop_name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@+id/adress"
                    android:text="@string/adress"
                    android:textColor="@android:color/background_dark"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/adress_place"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/contact" />

                <TextView
                    android:id="@+id/contactnumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/adress_place"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/adress"
                    android:text="@string/contact"
                    android:textColor="@android:color/background_dark"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/contactnumber"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/about" />

                <TextView
                    android:id="@+id/discription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/contactnumber"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@+id/about"
                    android:text="@string/discription"
                    android:lineSpacingExtra="2dp"
                    android:textColor="@android:color/background_dark"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/discription"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/time"
                    android:id="@+id/time"/>

                <TextView
                    android:id="@+id/discription_ofbusiness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/discription"
                    android:layout_toRightOf="@+id/time"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/time"/>


            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>